--- a/src/app/pages/others/single/single.component.html
+++ b/src/app/pages/others/single/single.component.html
@@ -8,17 +8,18 @@
           </div>
         </nb-tab>
         <nb-tab tabTitle="نظرات">
-          <div *ngIf="item && item.Comments">
-            <div *ngFor="let com of item.Comments">
+          <div *ngIf="item && item.Comments?.comment">
+            <div *ngFor="let com of item.Comments.comment">
               <div>{{com.Body}}</div>
             </div>
           </div>
         </nb-tab>
         <nb-tab tabTitle="تگ ها">
-          <div *ngIf="item && item.Tags">
-            <div *ngFor="let tag of item.Tags">
-              <div>{{tag.Name}}</div>
-            </div>
+          <div *ngIf="item && item.Tags?.Tag">
+            <span *ngFor="let tag of item.Tags.Tag">
+              <button (nbTooltip)="tag.Name" nbTooltipPlacement="top" nbTooltipStatus="primary" nbButton
+                style="margin-left: 8px;">{{tag.Name}}</button>
+            </span>
           </div>
         </nb-tab>
       </nb-tabset>
