--- a/src/app/pages/others/single/single.component.html
+++ b/src/app/pages/others/single/single.component.html
@@ -8,8 +8,8 @@
           </div>
         </nb-tab>
         <nb-tab tabTitle="نظرات">
-          <div *ngIf="item && item.Comments?.comment">
-            <div *ngFor="let com of item.Comments.comment">
+          <div *ngIf="item && item.Comments?.Comment">
+            <div *ngFor="let com of item.Comments.Comment">
               <div>{{com.Body}}</div>
             </div>
           </div>
