change cursor in some component

--- a/src/app/pages/others/smart-table/smart-table.component.html
+++ b/src/app/pages/others/smart-table/smart-table.component.html
@@ -6,7 +6,7 @@
   </nb-card-header>
 
   <nb-card-body>
-    <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onClick($event)">
+    <ng2-smart-table [settings]="settings" [source]="source" (userRowSelect)="onClick($event)" class="change-cursor">
     </ng2-smart-table>
   </nb-card-body>
 </nb-card>
