--- a/src/app/pages/main-dashboard/list/list.component.html
+++ b/src/app/pages/main-dashboard/list/list.component.html
@@ -5,7 +5,7 @@
       <nb-card-body>
         <nb-list>
           <nb-list-item *ngFor="let item of lists">
-            <nb-user [name]="item.Id" [title]="item.Title" (click)="onClick(item.Id)">
+            <nb-user [name]="item.Id" [title]="item.Title" (click)="onClick(item.Id)" class="change-cursor">
             </nb-user>
           </nb-list-item>
         </nb-list>
