fix buga in user list, make code better

--- a/src/app/pages/others/tag-list/tag-list.component.html
+++ b/src/app/pages/others/tag-list/tag-list.component.html
@@ -5,7 +5,7 @@
       <nb-card-body>
         <nb-list>
           <nb-list-item *ngFor="let item of lists">
-            <nb-user [name]="item.Name" [title]="item.Id" onclick="onClick(item.Id)" class="change-cursor">
+            <nb-user [name]="item.Name" [title]="item.Id" (click)="onClick(item.Id)" class="change-cursor">
             </nb-user>
           </nb-list-item>
         </nb-list>
