--- a/src/app/pages/main-dashboard/main-dashboard.component.html
+++ b/src/app/pages/main-dashboard/main-dashboard.component.html
@@ -1,15 +1,23 @@
-<div class="row">
-  <div class="col-xxl-12">
+<nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
+  <nb-card-body>
     <div class="row">
-      <div class="col-md-12">
-        <ngx-list [lists]="data"></ngx-list>
+      <div class="col-xxl-12">
+        <div class="row">
+          <div class="col-md-12">
+            <ngx-list [lists]="data"></ngx-list>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+  </nb-card-body>
+</nb-card>
 
-<div class="row">
-  <div class="col-xxl-12">
-    <ngx-tabs [item]="last"></ngx-tabs>
-  </div>
-</div>
+<nb-card [nbSpinner]="loading" nbSpinnerStatus="primary">
+  <nb-card-body>
+    <div class="row">
+      <div class="col-xxl-12">
+        <ngx-tabs [item]="last"></ngx-tabs>
+      </div>
+    </div>
+  </nb-card-body>
+</nb-card>
